[metadata]
name = interop_tests
version = 1.0.0
description = A collection of utility programs used in assisting interop scenario testing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rhpit/interop-tests
author = Cloud Services & Portfolio Integration
author_email = cspi-qe@redhat.com
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: GPLv3 License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    click
    openshift-python-wrapper
python_requires = >=3.10
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .
    tests*
    testing*

[options.entry_points]
console_scripts =
    interop-tests = interop_tests.cli:cli

[options.package_data]
* = schemas/*.json, schemas/*.xsd, py.typed, classifiers/*.yml

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[mypy-mps_utils.cli.xml.*]
ignore_errors = True
